infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: books.dev
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: graphql-server-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: graphql-frontend-service
              servicePort: 3000
